# gfx-triangle

./: Cargo.toml  build.rs
src/: main.rs  renderer.rs
src/data/: triangle.frag  triangle.vert
src/renderer/: buffer.rs  descriptor_set.rs  memory.rs  pipeline.rs  swapchain.rs  vertex.rs
