[package]
name = "gfx-practice-example"
version = "0.1.0"
authors = ["g2xpf <nameko.jack@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.6"
log = "0.4"
image = "0.21"
gfx-hal = "0.5"
winit = { version = "0.21.0" }

[features]
default = ["vulkan"]
vulkan = ["gfx-backend-vulkan"]
metal = ["gfx-backend-metal"]

[dependencies.gfx-backend-metal]
version = "0.5"
optional = true

[dependencies.gfx-backend-vulkan]
version = "0.5"
optional = true
features = ["x11"]

[build-dependencies]
glsl-to-spirv = "0.1"
